<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_title"
                android:icon="@drawable/icon_sort_by_title"
                android:title="@string/sort_by_title" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:icon="@drawable/icon_calendar"
                android:title="Sort by date created" />

        </menu>
    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/hide_completed_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:icon="@drawable/icon_bin"
        android:title="@string/delete_completed_tasks"
        app:showAsAction="never" />
</menu>
