<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/time_stamp_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/helvetica_neue_bold_condensed"
            android:gravity="end"
            android:text="@string/temp_timestamp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/helvetica_neue_bold"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="40"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:background="@color/white"
                android:fontFamily="@font/helvetica_neue_bold"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/priority_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/priority_task"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>